--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Fullstack Developer</p>
       <!-- Block, Element, Modifier (BEM) naming convention-->
       <div id="hero__animation">
-        <div id="hero__animation__img"></div>
+        <img src="https://i.postimg.cc/MTkdSRJf/44-DF94-CF-0432-4-E8-B-9-F5-C-4115-C822-DAD0.jpg" style="border-radius: 9px"/>
       </div>
     </div>
     <nav id="grid">
