--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <h1>Muhammad SANVE</h1>
       <p>STUDENT 🫤</p>
     </div>
+    
+<audio id="myAudio" muted autoplay controls>
+  <source src="https://mdsunvir.github.io/koi.mp3" type="audio/mpeg">
+</audio>
+<button class='btn' onclick="document.getElementById('myAudio').muted = false; document.getElementById('myAudio').play()">Play Music</button>
+
     <nav id="grid">
       <div id="grid__tl">
         <div id="grid__tl__btn">About</div>
